--- a/Algerian Forest Project.ipynb
+++ b/Algerian Forest Project.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Algerian Forest Fires Case Study\n",
     "\n",
-    "The dataset includes 244 instances that regroup a data of region of Algeria.\n",
+    "The dataset includes 244 instances that regroup a data of some region of Algeria.\n",
     "The period from June 2012 to September 2012.<br> \n",
     "The dataset includes 11 attribues and 1 output attribue (class)<br>\n",
     "\n",
@@ -29,7 +29,10 @@
     "\n",
     "## Objective :\n",
     "1. Data Cleaning and Feature Engineering\n",
-    "2. Exploratory Data Analysis"
+    "2. Exploratory Data Analysis\n",
+    "3. Data Visualization\n",
+    "\n",
+    "#### GITHUB LINK: https://github.com/anuraggupta19/Algerian-Forest-Project.git"
    ]
   },
   {
@@ -235,7 +238,7 @@
    "id": "9e19ece9",
    "metadata": {},
    "source": [
-    "## 1. Data Cleaning & Data Preprocessing"
+    "## 1. Data Cleaning & Feature Engineering"
    ]
   },
   {
@@ -2028,7 +2031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b699adc7",
+   "id": "65318568",
    "metadata": {},
    "source": [
     "## CONCLUSION:\n",
